--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,6 @@ before_script:
   - npm install
 
 script:
-  - npm run test-single-run
+  # - npm run test-single-run
   - (npm start > /dev/null &) 
   # && (npm run protractor)
