--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "description": "A starter project for AngularJS",
   "repository": "https://github.com/angular/angular-seed",
   "license": "MIT",
+  "engines": {
+    "node": "4.4.4"
+  }
   "devDependencies": {
     "bower": "^1.7.7",
     "http-server": "^0.9.0",
@@ -19,7 +22,7 @@
   "scripts": {
 
 
-    "postinstall": "npm install && bower install",
+    "postinstall": "bower install",
 
     "prestart": "npm install",
     "start": "http-server -a localhost -p 8000 -c-1 ./app",
