--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   },
   "scripts": {
 
-    "preinstall": "npm install",
     "postinstall": "bower install",
+    "prestart": "npm install",
     "start": "http-server -a localhost -p 8000 -c-1 ./app",
 
     "preupdate-webdriver": "npm install",
