--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,8 @@
     "html5-boilerplate": "^5.3.0",
     "angular-ui-router": "0.3.1",
     "angular-material": "^1.1.1",
-    "jquery": "^3.1.1"
+    "jquery": "^3.1.1",
+    "angular-cookies": "^1.5.8",
+    "angular-resource": "^1.5.8"
   }
 }
